 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Use getaddrinfo to handle the port number.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Formating changes for clarity.
 2003-08-17 Al Riddoch <alriddoch@zepler.org>
    - Re-order contents of config header so it works on systems
      which require more headers for socklen_t.
 2003-08-16 Al Riddoch <alriddoch@zepler.org>
    - Fix packaging of skserver_unix.h.
 2003-08-09 Al Riddoch <alriddoch@zepler.org>
    - Fix conditional building of tests.
 2003-08-08 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp, skstream/skstream_unix.h: Include skstream
      header with its fully qualified name for compatability, and move
      the unix system header out of the header into the cpp file.
    - skstream/skserver.cpp, skstream/skserver.h: Add new base class for ip
      socket types, and put in the ip address related functionality into it,
      so basic class can be used as a base for unix socket class.  Move
      can_accept() into the base class as it applies to any listen socket.
    - skstream/skserver_unix.h, skstream/skserver.cpp: Add a class for
      unix listen sockets.
 2003-07-30 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp, skstream/skserver.h, skstream/skstream.cpp,
      skstream/skstream.h, skstream/skstream_unix.h: Move virtual
      function implementations into .cpp files.
 2003-07-25 Al Riddoch <alriddoch@zepler.org>
    - Don't build or run the unit tests if CppUnit is not found.
 2003-07-24 Al Riddoch <alriddoch@zepler.org>
    - Add a more complex test for closesocket for mingw32.
 2003-07-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h: Fix header for windows build.
 2003-07-23 James Turner <james@worldforge.org>
    - Comitting long-standing ProjectBuilder file updates, 
      builds a nice skstream.framework under OS-X. Can also
      build the 'ping' demo, though that has issues generally.